--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.7",
     "firebase": "^10.8.0",
     "json-server": "^1.0.0-alpha.23",
     "react": "^18.2.0",
